Section 4: Authentication Skeleton

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnectionString":"Data source=datingapp.db"
   },
+  "TokenKey":"I am a fucking hero",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
